--- a/hw1/P2c/src/index.css
+++ b/hw1/P2c/src/index.css
@@ -3,7 +3,7 @@
 @import "./styles/TopBar.css";
 @import "./styles/Main.css";
 @import "./styles/Footer.css";
-@import "./styles/Table.css";
+@import "./styles/Grouping.css";
 @import "./styles/ParamBox.css";
 
 body {
